4.4.9 -> 4.5:
	- jbj: fix: python ts.hdrFromFdno(fdno) segfault.
	- jbj: use Realpath(3) so that RPMTAG_PACKAGEORIGIN has absolute path.
	- jbj: rpmio: add Realpath(3).
	- robert: python: backport rpm.archscore() and rpm.platformscore()
	    for smart depsolving usage
	- robert: rpmrepo: enable/disable sqlite dependent on rest of rpm
	- jbj: fix: allocate Icon: buffer after iconsize is initialized.
	- jbj: fix: skip %exclude/%ghost files to get more accurate RPMTAG_SIZE.
	- jbj: fix: RPMTAG_SIZE is incorrect with %exclude and %ghost directives
	    (Alexey Tourbin<at@altlinux.ru>).
	- rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c
	- jbj: tests: add check-install target to attempt --relocate install.
	- jbj: tests: enhance the devtool-sanity package with scripts and a file.
	- glen: install rpmdeps, rpmdigest, rpmmtree, rpmrepo tools to bindir
	- glen: add mono deps from PLD
	- glen: call %__java-{requires/provides} for java files (jars/classes)
	- glen: hotwire only -lossp-uuid not both with -luuid
	- glen: backport: perform fsync(2) before closing installed file (patchset#7657).
	- jbj: tests: verify -Kv output using popt.
	- jbj: tests: verify setup using --version/--querytags/--showrc.
	- jbj: display noisy getconf()/uname() info with -vv --showrc instead.
	- jbj: shorten debugging messages, --queryformat strings passed to
	    headerSprintf are getting huge.
	- jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	    (see --yum:primary.yaml spew for reproducer)
	- jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
	- jbj: expose intFormat() for use by ":rpn()".
	- jbj: backport remaining header ext tags/formats.
	- jbj: hotwire -luuid and backport rpmuuid.[ch].
	- jbj: add expanded build scripts for --specsrpm --queryformat
	- jbj: retrofit some arbitrary tagno's.
	- jbj: fix: is_selinux_enbled() > 0 is the correct test.
	- rpm.org: Mask signals while moving rebuilt rpmdb into place.