@@ -21,7 +21,11 @@ EXTRA_PROGRAMS = debugedit convertdb1
 
 LDADD = $(top_builddir)/lib/librpm.la
 
-bin_PROGRAMS =	rpmdeps rpmdigest rpmmtree rpmrepo @WITH_LIBDWARF_DEBUGEDIT@
+bin_PROGRAMS =		rpmdigest rpmmtree rpmrepo
+
+pkglibdir =		@USRLIBRPM@
+versionlibdir =		$(pkglibdir)/@VERSION@
+versionlib_PROGRAMS =	rpmdeps @WITH_LIBDWARF_DEBUGEDIT@
 
 convertdb1_SOURCES =	convertdb1.c
 
