@@ -1,4 +1,5 @@
 4.4.9 -> 4.5:
+	- robert: install rpmdeps and debugedit to pkglibdir as on HEAD
 	- jbj: fix: python ts.hdrFromFdno(fdno) segfault.
 	- jbj: use Realpath(3) so that RPMTAG_PACKAGEORIGIN has absolute path.
 	- jbj: rpmio: add Realpath(3).
